--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 asgiref==3.8.1
+chardet==5.2.0
 Django==4.2
-psycopg2-binary==2.9.9
+mysqlclient==2.2.4
+pillow==10.3.0
+reportlab==4.1.0
 sqlparse==0.4.4
+suds==1.1.2
 typing_extensions==4.11.0
